--- a/views/login.html
+++ b/views/login.html
@@ -4,12 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../static/css/bootstrap.css" rel="stylesheet" type='text/plan' />
-    <link href="../static/css/Site.css" rel="stylesheet" type='text/plan' />
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.css" rel="stylesheet" type='text/css' />
+    <link href="/static/css/Site.css" rel="stylesheet" type='text/css' />
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/login-form.css" rel="stylesheet" type='text/plan' />
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
+    <link href="/static/css/login-form.css" rel="stylesheet" type='text/css' />
     <title>GoChat</title>
 </head>
 
@@ -21,7 +21,7 @@
             <div class="logo">login</div>
             <!-- Main Form -->
             <div class="login-form-1">
-                <form cssstylecollection="text-left" action="/login" enctype="multipart/form-data" method="post">
+                <form cssstylecollection="text-left" action="/login" method="post">
                     <div class="main-login-form">
                         <div class="login-group">
                             <div class="form-group">
@@ -52,9 +52,6 @@
             <label>© 2021 - 喔吼 copyright by jacob</label>
         </footer>
     </div>
-    <script src="../static/js/modernizr-2.8.3.js"></script>
-    <script src="../static/js/jquery-3.4.1.js"></script>
-    <script src="../static/js/bootstrap.js"></script>
 
 </body>
 
