--- a/views/chatroom.html
+++ b/views/chatroom.html
@@ -16,7 +16,9 @@
             <div class="col-sm-10">
                 <div class="panel panel-primary">
                     <div class="panel-heading">Chating Content
-                        <span id="userName" class="glyphicon glyphicon-user pull-right"> Hi ！ {{.ClientID }} </span>
+                        <span class="glyphicon glyphicon-user pull-right"> Hi ！{{.Name}}</span>
+                        <span id="name" style="display: none;">{{.Name}}</span>
+                        <span id="uuid" style="display: none;">{{.ClientID}}</span>
                     </div>
                     <div id="messageBox" class="panel-body">
                         <ul id="messageList"></ul>
@@ -34,7 +36,6 @@
                     <div class="col-sm-4">
                         <input type="button" id="send" value="Sent">
                     </div>
-
                 </div>
             </div>
             <div class="col-sm-2">
@@ -57,7 +58,6 @@
     <script src="/static/js/modernizr-2.8.3.js"></script>
     <script src="/static/js/jquery-3.4.1.js"></script>
     <script src="/static/js/bootstrap.js"></script>
-
     <script>
         var socket = null;
         $(function () {
@@ -69,32 +69,32 @@
                 msgBox.append("<li>" + e.data + "</li>");
                 msgBox.scrollTop = msgBox.scrollHeight;
             }
-            console.log();
+
             $('#message').keypress(function (e) {
-                var m = $("#message");
-                var data = {
-                    client_id: '',
-                    to_id: '',
-                    msg: m.val()
-                }
+                var data = GetData();
                 var key = e.which;
                 if (key == 13) {
-                    socket.send(JSON.stringify(data));
-                    m.val('').focus();
+                    socket.send(data);
+                    $("#message").val('').focus();
                 }
             });
 
             $("#send").click(function () {
-                var m = $("#message");
-                var data = {
-                    client_id: '',
-                    to_id: '',
-                    msg: m.val()
-                }
-                socket.send(JSON.stringify(data));
-                m.val('').focus();
+                var data = GetData();
+                socket.send(data);
+                $("#message").val('').focus();
             });
         })
+
+        function GetData() {
+            var m = $("#message");
+            return JSON.stringify({
+                client_id: $('#uuid').text(),
+                to_id: $('#box').val(),
+                usr_name: $('#name').text(),
+                msg: m.val()
+            });
+        }
     </script>
 </body>
 
