--- a/views/chatroom.html
+++ b/views/chatroom.html
@@ -62,12 +62,20 @@
         var socket = null;
         $(function () {
             var wsuri = window.location.host + '/ws'
-            socket = new WebSocket('ws://' + wsuri);
+            socket = new WebSocket('ws://' + wsuri + "?clientId=" + $('#uuid').text());
+
+            socket.onopen = function (e) {
+                console.log(e);
+            }
 
             socket.onmessage = function (e) {
                 var msgBox = $("#messageList");
                 msgBox.append("<li>" + e.data + "</li>");
                 msgBox.scrollTop = msgBox.scrollHeight;
+            }
+
+            socket.onclose = function (e) {
+                console.log(e);
             }
 
             $('#message').keypress(function (e) {
