--- a/views/chatroom.html
+++ b/views/chatroom.html
@@ -68,6 +68,7 @@
             }
 
             socket.onmessage = function (e) {
+                console.log(e);
                 // let data = JSON.parse(e.data);
                 // let userBox = $("#box");
                 // let msgBox = $("#messageList");
