--- a/views/chatroom.html
+++ b/views/chatroom.html
@@ -74,7 +74,7 @@
                         list.empty();
                         userBox.append("<option value='all'>所有人</option>");
                         var users;
-                        $.get("/GetUserList", function (data) {
+                        $.get("api/GetUserList", function (data) {
                             users = JSON.parse(data);
                             $.each(users, function (index, value) {
                                 userBox.append("<option value='" + value.uid + "'>" + value.name + "</option>");
@@ -122,7 +122,6 @@
                 }
                 return JSON.stringify(data);
             }
-
         })
     </script>
 </body>
