--- a/views/login.html
+++ b/views/login.html
@@ -1,58 +1,86 @@
 <html>
-
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/css/bootstrap.css" rel="stylesheet" type='text/css' />
-    <link href="/static/css/Site.css" rel="stylesheet" type='text/css' />
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
-    <link href="/static/css/login-form.css" rel="stylesheet" type='text/css' />
-    <title>GoChat</title>
-</head>
-
-<body>
-    <div class="container body-content">
-
-        <!-- LOGIN FORM -->
-        <div class="text-center" style="padding:50px 0">
-            <div class="logo">login</div>
-            <!-- Main Form -->
-            <div class="login-form-1">
-                <form cssstylecollection="text-left" action="/login" method="post">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css">
+        <link href="/static/css/Site.css" rel="stylesheet" type="text/css">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" type="text/css">
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+        <link href="/static/css/login-form.css" rel="stylesheet" type="text/css">
+        <title>GoChat</title>
+    </head>
+    <body>
+        <div class="container body-content">
+            <!-- LOGIN FORM -->
+            <div class="text-center" style="padding:50px 0">
+                <div class="logo">login</div>
+                <!-- Main Form -->
+                <div class="login-form-1">
+                    <!-- <form cssstylecollection="text-left" action="" method="post"> -->
                     <div class="main-login-form">
                         <div class="login-group">
                             <div class="form-group">
                                 <label class="sr-only" for="acc">name</label>
-                                <input class="form-control" data-val="true"
-                                    data-val-maxlength="欄位 acc 必須是最大長度為 '50' 的字串或陣列型別。" data-val-maxlength-max="50"
-                                    data-val-required="acc 欄位是必要項。" id="acc" name="acc" placeholder="username"
-                                    required="required" type="text">
+                                <input
+                                    class="form-control"
+                                    data-val="true"
+                                    data-val-maxlength="欄位 acc 必須是最大長度為 '50' 的字串或陣列型別。"
+                                    data-val-maxlength-max="50"
+                                    data-val-required="acc 欄位是必要項。"
+                                    id="acc"
+                                    name="acc"
+                                    placeholder="username"
+                                    required="required"
+                                    type="text"
+                                >
                             </div>
                             <div class="form-group">
                                 <label class="sr-only" for="pswd">pswd</label>
-                                <input class="form-control" data-val="true"
-                                    data-val-maxlength="欄位 pswd 必須是最大長度為 '50' 的字串或陣列型別。" data-val-maxlength-max="50"
-                                    data-val-required="pswd 欄位是必要項。" id="pswd" name="pswd" placeholder="password"
-                                    required="required" type="password">
+                                <input
+                                    class="form-control"
+                                    data-val="true"
+                                    data-val-maxlength="欄位 pswd 必須是最大長度為 '50' 的字串或陣列型別。"
+                                    data-val-maxlength-max="50"
+                                    data-val-required="pswd 欄位是必要項。"
+                                    id="pswd"
+                                    name="pswd"
+                                    placeholder="password"
+                                    required="required"
+                                    type="password"
+                                >
                             </div>
                         </div>
-                        <button type="submit" class="login-button"><i class="fa fa-chevron-right"></i></button>
+                        <button id="login_btn" type="button" class="login-button">
+                            <i class="fa fa-chevron-right"></i>
+                        </button>
                     </div>
                     <div class="etc-login-form">
-                        <p>new user? <a href="/register">create new account</a></p>
+                        <p>
+                            new user?
+                            <a href="/register">create new account</a>
+                        </p>
                     </div>
-                </form>
+                    <!-- </form> -->
+                </div>
             </div>
+            <footer>
+                <label>© 2021 - 喔吼 copyright by jacob</label>
+            </footer>
         </div>
-
-        <footer>
-            <label>© 2021 - 喔吼 copyright by jacob</label>
-        </footer>
-    </div>
-
-</body>
-
+    </body>
+    <!-- cdn -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <!-- script -->
+    <script>
+    $("#login_btn").click(function(){
+        $.post("/api/login", {acc : $("#acc").val(),pswd : $("#pswd").val()},function(data){
+            window.location.href = '/chatroom?uid='+data.uid
+        },'json')
+        .fail(function(data){
+            alert(data.message);
+        },'json')
+    });
+    </script>
 </html>
