--- a/views/chatroom.html
+++ b/views/chatroom.html
@@ -75,7 +75,7 @@
                         list.empty();
                         userBox.append("<option value='all'>所有人</option>");
                         var users;
-                        $.get("api/GetUserList", function (data) {                                     
+                        $.get("/api/GetUserList", function (data) {                                     
                             $.each(data, function (index, value) {
                                 userBox.append("<option value='" + value.uid + "'>" + value.name + "</option>");
                                 list.append("<li>" + value.name + "</li>");
