--- a/views/login.html
+++ b/views/login.html
@@ -73,7 +73,8 @@
     <!-- script -->
     <script>
     $("#login_btn").click(function(){
-        var body = {acc : $("#acc").val(),pswd : $("#pswd").val()}
+        var body = JSON.stringify({acc : $("#acc").val(),pswd : $("#pswd").val()})
+        console.log(body)
         $.post("/api/login", body, function(data){
             window.location.href = '/chatroom/'+data.uid
         },'json')
